# kaixin-native

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md
.git-crypt/keys/default/0/: BEFD50CC54DD1BC4E3F9E70D7686D6355C9DDA4D.gpg
cmake/: CheckCCompilerFlags.cmake  FindCPPCODEC.cmake  FindIXWebSocket.cmake  FindMbedTLS.cmake  TargetArch.cmake  VariableNameForSymbol.cmake  WarningFlags.cmake
demo/: CMakeLists.txt  appkey.h  main.cpp
example/: CMakeLists.txt  appkey.h  main.cpp
src/: CMakeLists.txt  authorization_disabler.h  fingerprint.cpp  fingerprint.h  jwt.cpp  jwt.h  kaixin.cpp  kaixin.h  kaixin.rc.in  kaixinConfig.cmake.in  kaixin_api.cpp  kaixin_api.h  kaixin_internal.cpp  kaixin_internal.h  kaixin_version.h.in  logger.cpp  logger.h  noncopyable.h  rapidjsonhelpers.h  simple_timer.cpp  simple_timer.h  utils.cpp  utils.h  websocket_client.cpp  websocket_client.h  wmi_client.cpp  wmi_client.h
